# qt5_hello_world

./: CMakeLists.txt  README.md  hello.cpp  hello.hpp  main.cpp
